golden/error/runtime_unknown_field_list.test
let turbo_encabulator = [
  "differential girdlespacing",
  "hydrocoptic marzlevanes",
  "pentametric fan",
  "spurving bearings",
];
turbo_encabulator.is_prefabulated

# output:
 --> stdin:7:18
  |
7 | turbo_encabulator.is_prefabulated
  |                   ^~~~~~~~~~~~~~~
Error: Unknown field.
